= Changelog


== Release 0.2.2

* FIXED: The "Unhandled special" error message for real!


== Release 0.2.1

* FIXED: RubyGems fails to generate the documentation with the following error message "Unhandled special".


== Release 0.2.0

* ADDED: Added Helperful::ContentHelper module (subsequently renamed to Helperful::ContentHelper) with #sidebar helper for passing content_for :sidebar to the layout. Even if this is a really simple method, this method adds a bit of semantic meaning to common application usage of content_for for created sidebars.

* ADDED: Added HelperfulAffiliationsHelper module (subsequently renamed to Helperful::AffiliationsHelper).

* ADDED: Added HelperfulAffiliationsHelper#tradedoubler_verification_tag helper for generating Tradedoubler verifications tags (subsequently renamed to Helperful::AffiliationsHelper).

* ADDED: Added #helperful method as shortcut for including helper modules from the Helperful namespace.

* ADDED: Packaged library as a GEM.

* CHANGED: Renamed TitleHelper to HelperfulTitleHelper to prevent conflicts with other common helpers (subsequently renamed to Helperful::TitleHelper).

* CHANGED: Renamed all helper modules from HelperfulHelperName to Helperful::HelperName.


== Release 0.1.0

* ADDED: Imported TitleHelper from Gist.